--- a/.choreo/component.yaml
+++ b/.choreo/component.yaml
@@ -1,11 +1,13 @@
-schemaVersion: 1.0 
- # Example endpoint configuration
+schemaVersion: 1.1
+
 endpoints:
-- name: hotel_api
-  service:
-    basePath: /api
-    port: 8001
-  type: REST
-  networkVisibilities:
+
+  - name: hotel-api
+    displayName: Hotel REST Endpoint
+    service:
+      basePath: /api
+      port: 8001
+    type: REST
+    networkVisibilities:
       - Public
-  schemaFilePath: openapi.yaml
+    schemaFilePath: openapi.yaml
